# Nosdesk

./: .gitignore  CLAUDE.md  DOCKER-README.md  LICENSE  README.md  api-insomnia.json  collaborative-editor-fixes.md  compose.dev.yaml  compose.yaml  current_schema.sql  docker-compose.yml  docker.env.example  helpdesk_backup.sql  helpdesk_data_backup.sql  index.html  init-db.sql  package-lock.json  package.json  vite.config.ts
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README-AUTH.md  README-MICROSOFT-SETUP.md  README-SECURITY.md  add_local_auth_identities.sql  diesel.toml  dump.rdb  env.example  migrate_password_hashes.sql  start-dev.sh  start.sh
backend/migrations/: 2024_08_21_000000_create_document_updates_table.sql
backend/migrations/2025-03-08-060004_initial_schema/: down.sql  up.sql
backend/migrations/2025-04-04-034116_add_auth_providers/: down.sql  up.sql
backend/migrations/2025-04-24-044249_add_user_auth_identities/: down.sql  up.sql
backend/migrations/2025-04-28-000859_update_user_auth_identities/: down.sql  up.sql
backend/migrations/2025-04-28-114408_add_user_profile_fields/: down.sql  up.sql
backend/migrations/2025-04-29-005618_convert_content_to_bytea/: down.sql  up.sql
backend/migrations/2025-05-23-000915_drop_auth_provider_configs/: down.sql  up.sql
backend/migrations/2025-05-26-015110_add_avatar_thumb_field/: down.sql  up.sql
backend/migrations/2025-05-26-061432_create_sync_history/: down.sql  up.sql
backend/migrations/2025-05-27-002434_update_devices_for_entra_sync/: down.sql  up.sql
backend/migrations/2025-05-27-034824_create_ticket_devices_junction_table/: down.sql  up.sql
backend/migrations/2025-05-28-045226_add_microsoft_uuid_to_users/: down.sql  up.sql
backend/migrations/2025-05-29-003505_remove_can_cancel_from_sync_history/: down.sql  up.sql
backend/migrations/2025-05-29-004502_create_user_emails_table/: down.sql  up.sql
backend/migrations/2025-05-29-041730_create_ticket_assignees_table/: down.sql  up.sql
backend/migrations/2025-06-03-015044_initial_schema/: down.sql  up.sql
backend/migrations/2025-12-27-000000_add_groups_and_categories/: down.sql  up.sql
backend/migrations/2025-12-27-100000_add_assignment_rules/: down.sql  up.sql
backend/migrations/2026-01-04-000000_add_group_sync_fields/: down.sql  up.sql
backend/migrations/2026-01-04-000001_add_device_groups/: down.sql  up.sql
backend/migrations/2026-01-06-000000_add_sync_is_delta/: down.sql  up.sql
backend/migrations/2026-01-06-000001_rename_azure_to_microsoft_device_id/: down.sql  up.sql
backend/migrations_backup/2025-02-27-103504_create_tickets/: down.sql  up.sql
backend/migrations_backup/2025-02-27-232650_update_modified_to_timestamp/: down.sql  up.sql
backend/migrations_backup/2025-02-27-235137_change_created_to_timestamp/: down.sql  up.sql
backend/migrations_backup/2025-02-28-064514_create_documentation/: down.sql  up.sql
backend/migrations_backup/2025-02-28-070651_add_parent_id_to_documentation_pages/: down.sql  up.sql
backend/migrations_backup/2025-03-02-025222_create_users/: down.sql  up.sql
backend/migrations_backup/2025-03-02-041743_create_projects/: down.sql  up.sql
backend/migrations_backup/2025-03-02-222106_add_linked_tickets/: down.sql  up.sql
backend/migrations_backup/2025-03-03-021542_add_ticket_id_to_documentation_pages/: down.sql  up.sql
backend/migrations_backup/2025-03-03-021828_add_is_comment_to_notes/: down.sql  up.sql
backend/migrations_backup/2025-03-03-112610_remove_documentation_categories/: down.sql  up.sql
backend/migrations_backup/2025-03-04-213411_add_display_order_to_documentation_pages/: down.sql  up.sql
backend/migrations_backup/2025-03-05-041444_drop_documentation_page_relationships/: down.sql  up.sql
backend/migrations_backup/2025-03-05-042734_replace_notes_with_comments/: down.sql  up.sql
backend/migrations_backup/2025-03-06-000000_add_closed_at_to_tickets/: down.sql  up.sql
backend/migrations_backup/2025-03-07-221112_add_password_hash_to_users/: down.sql  up.sql
backend/migrations_backup/2025-03-07-232724_convert_password_hash_to_bytea/: down.sql  up.sql
backend/src/: config_utils.rs  db.rs  handlers.rs.backup  lib.rs  main.rs  models.rs  oidc.rs  repository.rs  schema.rs
backend/src/handlers/: assignment_rules.rs  auth.rs  auth_providers.rs  backup.rs  branding.rs  categories.rs  collaboration.rs  debug.rs  devices.rs  documentation.rs  email.rs  files.rs  groups.rs  invitation.rs  mfa_reset.rs  microsoft_graph.rs  mod.rs  password_reset.rs  (+6 more)
(+437 files in other folders)
