[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "import_tickets"
path = "src/bin/import_tickets.rs"

[dependencies]
actix-web = "4.9.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "serde_json", "uuid", "network-address"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8.10"
uuid = { version = "1.17", features = ["v4", "serde"] }
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
actix-files = "0.6.5"
futures = "0.3"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
actix-web-httpauth = "0.8.2"
regex = "1.11.0"

# WebSocket dependencies for collaborative editing
actix-web-actors = "4.3.1"  # WebSocket actors for Actix
actix = "0.13.5"            # Actor framework
tokio = { version = "1.0", features = ["full"] }
lazy_static = "1.5.0"        # For static mutable state
dashmap = "6.1.0"            # Thread-safe concurrent hashmap
env_logger = "0.11.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-actix-web = "0.7"
mockall = { version = "0.13.0", optional = true }
actix-service = "2.0.2"
derive_more = "0.99.17"
aws-sdk-s3 = "1.0.0"
aws-config = "1.0.0"
aws-credential-types = "1.0.0"
rand = "0.8.5"              # Random number generation for auth state
reqwest = { version = "0.11", features = ["json"] } # HTTP client for OAuth requests
urlencoding = "2.1.3"       # URL encoding/decoding
querystring = "1.1.0"       # Query string parsing

# Add yrs for Yjs/CRDT support in Rust
yrs = { version = "0.23", features = ["sync"] }
lib0 = "0.16.10"
bytes = "1.5.0"

# Add base64 for encoding/decoding binary data
base64 = "0.21.7"

# Add fastrand dependency 
fastrand = "2.0.0"

# Add mime crate
mime = "0.3.17"

# Image processing for thumbnail generation
image = { version = "0.24", features = ["webp", "jpeg", "png"] }

# Rate limiting for security
actix-limitation = "0.5.1"

# MFA (Multi-Factor Authentication) dependencies
totp-rs = "5.4.0"         # TOTP (Time-based One-Time Password) implementation
qrcode = "0.14.1"         # QR code generation
base32 = "0.4.0"          # Base32 encoding for TOTP secrets

# Security dependencies for MFA encryption
ring = "0.17.8"           # Cryptographic primitives for AES-256-GCM encryption
zeroize = { version = "1.8.1", features = ["derive"] } # Memory zeroing for sensitive data
hex = "0.4.3"             # Hex encoding/decoding
ipnetwork = "0.20.0"      # IP network types for security events and sessions
anyhow = "1.0"             # Error handling for applications

# For testing only
[dev-dependencies]
actix-rt = "2.10.0"
mockall = "0.13.0"
